# led-strip-animations

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: color.rs  color_cache.rs  controller.rs  curve.rs  indexing.rs  lib.rs  mock.rs  pattern.rs  processing.rs  strip.rs  timeline.rs  util.rs
src/animation/: iterators.rs  mod.rs  running_light.rs  static_animation.rs  testing.rs
