[package]
name = "led-strip-animations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
rgb = "0.8"
keyframe = {version = "1.1", git = "https://github.com/HannesMann/keyframe", default-features = false }

[dev-dependencies]
assert_matches = "1.5"
nb = "1.1"
embedded-hal = "0.2"